<resources>
    <string name="app_name">JAW Music Player</string>
    <string name="music_icon">Music Icon</string>
    <string name="all_songs">All Songs</string>
    <string name="home_music_icon">Home Music Icon</string>
    <string name="home_album_icon">Home Album Icon</string>
    <string name="album">Album</string>
    <string name="previous_button">Previous Button</string>
    <string name="play_button">Play Button</string>
    <string name="next_button">Next Button</string>
    <string name="now_playing">Now Playing.....</string>
    <string name="music_icon_middle">Music Icon Middle</string>
    <string name="home">Home</string>
</resources>
