<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NowPlaying">

    <Button
        android:id="@+id/btn_home"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/home"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/vw_holder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/vw_holder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="2dp"
        android:background="@color/cardview_dark_background"
        app:layout_constraintBottom_toTopOf="@+id/img_previous_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_music_icon_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/music_icon_middle"
        android:src="@drawable/ic_play_circle_outline_white"
        app:layout_constraintBottom_toBottomOf="@+id/vw_holder"
        app:layout_constraintEnd_toEndOf="@+id/vw_holder"
        app:layout_constraintStart_toStartOf="@+id/vw_holder"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/img_previous_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/previous_button"
        android:src="@drawable/ic_skip_previous"
        app:layout_constraintBottom_toBottomOf="@+id/img_play_button"
        app:layout_constraintEnd_toStartOf="@+id/img_play_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/vw_holder"
        app:layout_constraintTop_toTopOf="@+id/img_play_button"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/img_play_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/play_button"
        android:src="@drawable/ic_play_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/img_next_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/img_previous_button"
        app:layout_constraintTop_toBottomOf="@+id/vw_holder"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/img_next_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/next_button"
        android:src="@drawable/ic_skip_next"
        app:layout_constraintBottom_toBottomOf="@+id/img_play_button"
        app:layout_constraintEnd_toEndOf="@+id/vw_holder"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/img_play_button"
        app:layout_constraintTop_toTopOf="@+id/img_play_button"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txt_now_playing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/now_playing"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/vw_holder" />

</androidx.constraintlayout.widget.ConstraintLayout>